dataset1235/2025-2/2868285114/users/221116065/executions/3649835072_1927446959.log
== RUN (2025-08-23 21:17:17)
-- CODE: 
n = float(input("Digite um numero real: "))

calculo_1 = n * (27/100)
calculo_2 = n * n + (42/100)
calculo_3 = n - n * (63%)

print(round(calculo_1, 2))
print(round(calculo_2, 2))
print(round(calculo_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    calculo_3 = n - n * (63%)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 21:18:38)
-- CODE: 
n = float(input("Digite um numero real: "))

calculo_1 = n * (27/100)
calculo_2 = n * (42/100) + n
calculo_3 = n - n * (63/100)

print(round(calculo_1, 2))
print(round(calculo_2, 2))
print(round(calculo_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 21:17:58)
-- CODE: 
n = float(input("Digite um numero real: "))

calculo_1 = n * (27/100)
calculo_2 = n * (42/100) + n
calculo_3 = n - n * (63/100)

print(round(calculo_1, 2))
print(round(calculo_2, 2))
print(round(calculo_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 21:18:56)
-- CODE: 
n = float(input("Digite um numero real: "))

calculo_1 = n * (27/100)
calculo_2 = n * (42/100) + n
calculo_3 = n - n * (63/100)

print(round(calculo_1, 2))
print(round(calculo_2, 2))
print(round(calculo_3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 21:17:32)
-- CODE: 
n = float(input("Digite um numero real: "))

calculo_1 = n * (27/100)
calculo_2 = n * n + (42/100)
calculo_3 = n - n * (63/100)

print(round(calculo_1, 2))
print(round(calculo_2, 2))
print(round(calculo_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
